Quorum3/Library/Tests/Inheritance/Pass/B2.quorum
class B is A
    action Begin returns integer
        return parent:A:Test()
    end

    action Test returns integer
        return 2
    end
end