Quorum3/Library/Tests/Inheritance/Fail/InvalidParentName.quorum
use Libraries.Game.Game
use Libraries.Interface.Item2D

class InvalidParentName is Item2D
    action Main
        parent:Item:Move(1, 2)
    end
end